# fastapi-deploy-example

./: Makefile  README.md  main.py  main.spec  pyproject.toml
config/: config.ini  settings.py
